# hexhashi

./: Cargo.toml  README.md  deny.toml  index.html  styles.css
hashi_logic/: Cargo.toml
hashi_logic/src/: hashi.rs  hex.rs  lib.rs
src/: app.rs  game.rs  hashi.rs  hex.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: hexhashi.icns
src-tauri/src/: main.rs
