[package]
name = "hexhashi-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos-use = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
hexhashi_logic = { path = "hashi_logic" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect"] }

[workspace]
resolver = "3"
members = ["src-tauri", "hashi_logic"]
